[package]
name = "signaged-util"
version = "0.5.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[build-dependencies]
chrono = "0.4.26"

[dependencies]
anyhow = "1.0.74"
chrono = { version = "0.4.26", features = ["serde"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream", "rustls", "tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
